--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
         "@typescript-eslint/parser": "^8.35.0",
         "@vue/tsconfig": "^0.5.1",
         "esbuild": "^0.25.5",
+        "eslint": "^8.57.1",
         "eslint-config-prettier": "^10.1.1",
         "eslint-plugin-import": "^2.32.0",
         "prettier": "^3.5.3",
